docs: biomeについて追記

--- a/documents/design/00_技術構成.md
+++ b/documents/design/00_技術構成.md
@@ -1,5 +1,13 @@
 # 技術構成
 
-##  メインフレームワーク
+## メインフレームワーク
 
 [React Router](https://reactrouter.com)
+
+## 開発用ツール
+
+### 静的解析
+
+biomeによってLint/Formatをかけている。
+`bun run format`を使用する。
+CIではbun run lintを使用する。
