docs: 開発用ツールの静的解析セクションを更新し、CI対応の手順を追加

--- a/documents/design/00_技術構成.md
+++ b/documents/design/00_技術構成.md
@@ -6,8 +6,14 @@
 
 ## 開発用ツール
 
-### 静的解析
+### 静的解析(CI対応)
 
-biomeによってLint/Formatをかけている。
-`bun run format`を使用する。
-CIではbun run lintを使用する。
+`biome`によってLint/Formatをかけている。
+`bun format`を使用する。
+CIでは`bun lint`を使用する。
+
+`tsc`と`react router`によって型チェックを行う。
+`bun typecheck`で一括で確認可能
+
+`knip`で未使用エクスポートや未使用ファイル等を検出する
+`bun knip`で実行
