--- a/documents/design/00_技術構成.md
+++ b/documents/design/00_技術構成.md
@@ -6,8 +6,7 @@
 
 ## UI関連
 
-- PandaCSS
-- Ark UI ... ヘッドレスUIライブラリ
+- Tailwind css
 
 ## 開発用ツール
 
@@ -19,6 +18,3 @@ CIでは`bun lint`を使用する。
 
 `tsc`と`react router`によって型チェックを行う。
 `bun typecheck`で一括で確認可能
-
-`knip`で未使用エクスポートや未使用ファイル等を検出する
-`bun knip`で実行
