--- a/.clinerules/01_プロジェクト説明.md
+++ b/.clinerules/01_プロジェクト説明.md
@@ -23,39 +23,32 @@
 .
 ├── .clinerules ... clineのシステムプロンプトやルールを記載
 ├── .github ... cicd
-├── app ... React Routerをベースにフロントエンドソースコードを記載
+├── blog ... フロントエンドアプリケーション (React Router, Vite, Tailwind CSS)
 ├── documents ... 調査ログや設計の決定資料等を配置
-├── package.json
-├── panda.config.ts ... pandacssの設定ファイル
-├── park-ui.json ... parkuiの設定ファイル
-├── postcss.config.cjs ... postcss設定ファイル(pandacss関連)
-├── public
-├── react-router.config.ts ... react-routerの設定ファイル
+├── tools ... 関連ツール (例: NotionConverter)
 ├── README.md
-├── styled-system ... pandacss由来
-├── tsconfig.json
-└── vite.config.ts
+# 他、ルートレベルの設定ファイル等 (package.json, tsconfig.json などは blog ディレクトリ内に移動)
 ```
 
-## app以下の構成
+## blog/app 以下の構成 (主要ファイル例)
 
 ```
-.
-├── app.css ... 全体に影響するCSS設定
-├── root.tsx
-├── routes
-│   └── home.tsx
-└── routes.ts
+app/
+├── app.css           # グローバルCSS
+├── entry.server.tsx  # サーバーサイドレンダリングのエントリーポイント
+├── root.tsx          # アプリケーションのルートコンポーネント
+├── routes.ts         # ルート定義
+└── routes/           # 各ルートに対応するコンポーネント
+    └── home.tsx      # ホームページのコンポーネント例
 ```
+(詳細は `.clinerules/02_frontend.md` を参照)
 
 ## ライブラリ関連のルール
 
 ### UI/スタイリング
 
-- Panda CSS, Park UI(Ark UI)を中心に構成します。 
-- Park UIのスタイリング済みのコンポーネントを利用して構成し、必要に応じてPandaCSSで上書きする形式をとります。
-- アイコンは`lucide-react`を使用します。
+- Tailwind CSS を使用してスタイリングを行います。
 
 ### フレームワーク
 
-- React Router v7を使用します。
+- React Router v7 と Vite を使用します。
