fix: wrangler.jsoncのnameを要件に合わせて修正

--- a/documents/ADR/01_デプロイに関する決定.md
+++ b/documents/ADR/01_デプロイに関する決定.md
@@ -7,3 +7,7 @@ blogディレクトリ以下を公開範囲としてデプロイする
 Cloudlfare ダッシュボードから設定。
 WorkersとGitリポジトリを接続する方式を採用。
 https://developers.cloudflare.com/workers/ci-cd/builds/
+
+## 成約
+
+wrangler.jsoncのnameを要件に合わせる必要がある。
